# ros_cookbook

./: .gitignore
code/ROS1/: README.md
code/ROS1/DynamicReconfigure/: README.md
code/ROS1/Launch/: roslaunch.py
code/ROS1/Marker/: README.md  distance_marker.py  marker_example.py
code/ROS1/Marker/polar_grid/src/polar_grid/src/: polar_grid_display.cpp
code/ROS1/MetaPkg/: CMakeLists.txt
code/ROS1/Rviz/: rviz_qt.py
code/ROS1/Service/src/service_demo/: CMakeLists.txt  package.xml
code/ROS1/Service/src/service_demo/scripts/: ros_client.py  ros_server.py
code/ROS1/SubPub/: publisher.py
code/ROS1/TF/: tf.md
code/ROS1/TF/src/learning_tf2/: CMakeLists.txt  package.xml  start_demo.launch
code/ROS1/TF/src/learning_tf2/src/: listener_tf.py  publisher_tf.py  turtle_tf2_listener.cpp
code/ROS1/rocky_tf_monitor/: CMakeLists.txt  demo.launch  package.xml
code/ROS1/rocky_tf_monitor/scripts/: rocky_tf_monitor.py
code/ROS2/: cv_bridge_.py
code/ROS2/am_rviz_plugins/: .clang-format  .gitignore
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/: CMakeLists.txt  README.md  package.xml
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/msg/: BoundingBox.msg  OverlayMenu.msg
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/plugins/: plugin_description.xml
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/samples/: bounding_box_sample.py  kitti_bounding_box_sample.py
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/samples/config/: kitti.yaml
code/ROS2/am_rviz_plugins/src/am_rviz_plugins/src/: bev_controller.cpp  bev_controller.hpp  bounding_box_array_display.cpp  bounding_box_array_display.hpp  bounding_box_display.cpp  bounding_box_display.hpp  bounding_box_display_common.hpp  color_utils.hpp  log_display.cpp  log_display.hpp  log_panel.cpp  log_panel.hpp  polar_grid_display.cpp  polar_grid_display.hpp
code/ROS2/am_rviz_plugins/src/rviz_animated_view_controller/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
code/ROS2/am_rviz_plugins/src/rviz_animated_view_controller/plugins/: plugin_description.xml
code/ROS2/am_rviz_plugins/src/rviz_animated_view_controller/src/: rviz_animated_view_controller.cpp  rviz_animated_view_controller.hpp
code/ROS2/am_rviz_plugins/src/view_controller_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
code/ROS2/am_rviz_plugins/src/view_controller_msgs/msg/: CameraMovement.msg  CameraPlacement.msg  CameraTrajectory.msg
code/ROS2/launch/: static_transformation.launch
code/ROS2/mininal-package/src/minimal-package/: CMakeLists.txt  package.xml
code/ROS2/mininal-package/src/minimal-package/launch/: example.launch  example.py
code/ROS2/mininal-package/src/minimal-package/src/: publisher_member_function.cpp  subscriber_member_funtion.cpp
code/gazebo/model/: model.config  model.sdf
code/hybrid/src/perception_msgs/: CMakeLists.txt
code/hybrid/src/perception_msgs/cmake/: ROS1.cmake  ROS2.cmake
code/hybrid/src/perception_msgs/msg/object_recognition/: ImageDecision.msg  ObjectInImage.msg
code/perception_msgs/: package.xml
code/perception_msgs/cmake/: Color.cmake
code/perception_msgs/msg/object_recognition/: ObjectsInImage.msg
code/project/pointcloud_filter_node/: CMakeLists.txt  README.md  package.xml
code/project/pointcloud_filter_node/src/: pointcloud_filter_node.cpp
docs/: README.md  _navbar.md  _sidebar.md  index.html
docs/Beginner/: Build Tool.md  CMake and Package.md  Command-Line Interface.md  Concepts.md  Executor and Callback.md  Glossary.md  Header and Module.md  Install.md  Interface.md  Launch.md  Logger.md  Network.md  Node and Component.md  Parameter Server.md  Record.md  TF.md  Time.md
docs/Others/: Code Style.md
docs/Projcet/scripts/: topic-odometry2path.py
docs/Software and Tools/: Blender.md  Foxglove Studio.md  Gazebo.md  NoMachine.md  Others.md  PlotJuggler.md  Prompt.md  RViz.md  Tools.md
docs/_dynamic/js/: remove_copy_symbol.js  remove_unused_symbol.js  search-shortcut.js
docs/_static/css/: layui-row.css  markdown-table.css
snippet/gazebo/: template.xacro
