<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_filter_node</name>
  <version>0.0.1</version>
  <description>A simple node to filter Velodyne pointcloud data</description>

  <maintainer email="your_email@somewhere.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
