<package format="3">
  <name>am_rviz_plugins</name>
  <version>0.0.1</version>
  <description>rviz2 plugins</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>TODO</license>

  <!-- Build and export dependencies. -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>qtbase5-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>