<package format="3">
  <name>view_controller_msgs</name>
  <version>0.2.0</version>
  <description>Messages for (camera) view controllers</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>

  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/view_controller_msgs</url>
  <url type="bugtracker">https://github.com/ros-visualization/view_controller_msgs/issues</url>
  <url type="repository">https://github.com/ros-visualization/view_controller_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
